issue#154 text overlap fixed on upload

--- a/wp-content/themes/minyawns/css/photo-upload.css
+++ b/wp-content/themes/minyawns/css/photo-upload.css
@@ -52,7 +52,7 @@
     background-image:linear-gradient(top, #333639, #303335);
     border-top:1px solid #3d4043;
     border-bottom:1px solid #2b2e31;*/
-    /*padding:15px;*/
+    padding:5px;
     /*height: 80px;*/
     position: relative;
 	border-radius:3px;
